--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                 <!-- Miembro 1 (Borde Rojo) -->
                 <div class="card-base p-6 rounded-xl shadow-lg card-glow border-2 border-transparent hover:border-red-logo">
                     <img src="https://placehold.co/150x150/f0f0f0/333333?text=Director" alt="" class="w-36 h-36 rounded-full mx-auto object-cover mb-4 border-4 border-red-logo">
-                    <h4 class="text-xl font-semibold text-[#333333]">Juan Pérez</h4>
-                    <p class="text-sm text-[#007ACC] font-medium mb-3">Director General & Presentador Principal</p>
+                    <h4 class="text-xl font-semibold text-[#333333]">Rudecindo Masaquiza</h4>
+                    <p class="text-sm text-[#007ACC] font-medium mb-3">Director General</p>
                     <p class="text-gray-600 text-sm">
                         Líder y voz de KausariFilms. Su visión estratégica mantiene la marca relevante, mientras que su carisma garantiza la conexión con el público en cada transmisión.
                     </p>
@@ -184,16 +184,16 @@
                 <!-- Miembro 2 (Borde Azul) -->
                 <div class="card-base p-6 rounded-xl shadow-lg card-glow border-2 border-transparent hover:border-[#007ACC]">
                     <img src="https://placehold.co/150x150/f0f0f0/333333?text=Productor" alt="" class="w-36 h-36 rounded-full mx-auto object-cover mb-4 border-4 border-[#007ACC]">
-                    <h4 class="text-xl font-semibold text-[#333333]">María López</h4>
-                    <p class="text-sm text-[#007ACC] font-medium mb-3">Jefa de Producción & Logística</p>
+                    <h4 class="text-xl font-semibold text-[#333333]">Curi Chango</h4>
+                    <p class="text-sm text-[#007ACC] font-medium mb-3">Jefe de Producción & Logística</p>
                     <p class="text-gray-600 text-sm">
-                        La mente organizadora detrás de las operaciones. María asegura que cada transmisión en vivo y cada proyecto publicitario se ejecuten sin fallas, sin importar las circunstancias.
+                        La mente organizadora detrás de las operaciones. Curi asegura que cada transmisión en vivo y cada proyecto publicitario se ejecuten sin fallas, sin importar las circunstancias.
                     </p>
                 </div>
                 <!-- Miembro 3 (Borde Naranja) -->
                 <div class="card-base p-6 rounded-xl shadow-lg card-glow border-2 border-transparent hover:border-orange-logo">
                     <img src="https://placehold.co/150x150/f0f0f0/333333?text=Marketing" alt="" class="w-36 h-36 rounded-full mx-auto object-cover mb-4 border-4 border-orange-logo">
-                    <h4 class="text-xl font-semibold text-[#333333]">Carlos Romero</h4>
+                    <h4 class="text-xl font-semibold text-[#333333]">Jairo Masaquiza</h4>
                     <p class="text-sm text-[#007ACC] font-medium mb-3">Especialista en Marketing Digital</p>
                     <p class="text-gray-600 text-sm">
                         Encargado de la publicidad y alianzas estratégicas. Carlos diseña campañas que realmente convierten, uniendo la credibilidad de KausariFilms con los objetivos comerciales de nuestros clientes.
