--- a/index.html
+++ b/index.html
@@ -111,25 +111,27 @@
         </nav>
     </header>
 
-    <!-- Sección Hero / Inicio (Fondo claro con imagen de acento) -->
+    <!-- Sección Hero / Inicio con imagen del equipo de fondo -->
+    <!-- NOTA: Para GitHub Pages, la imagen debe estar en la carpeta img/ del repositorio -->
     <section id="inicio" class="h-screen flex items-center justify-center bg-cover bg-center" 
-             style="background-image: linear-gradient(rgba(247, 247, 247, 0.95), rgba(247, 247, 247, 0.95)), url('https://placehold.co/1920x1080/e5e7eb/333333?text=Fondo+de+Estudio+Audiovisual');">
+             style="background-image: linear-gradient(rgba(0, 40, 60, 0.4), rgba(0, 60, 80, 0.5)), url('img/equipo-kausari.jpg');">
+
         <div class="text-center px-6">
-            <p class="text-sm font-bold tracking-widest uppercase text-[#007ACC] mb-3 flex items-center justify-center">
+            <p class="text-sm font-bold tracking-widest uppercase text-white mb-3 flex items-center justify-center">
                 <svg class="w-4 h-4 mr-2 animate-pulse text-[#ef4444]" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clip-rule="evenodd"></path></svg>
                 EN VIVO Y EN CONTEXTO
             </p>
-            <h1 class="text-5xl md:text-7xl font-extrabold text-[#333333] mb-4 leading-tight">
-                El Pulso de la <span class="text-[#007ACC]">Comunidad</span>
+            <h1 class="text-5xl md:text-7xl font-extrabold text-white mb-4 leading-tight drop-shadow-2xl">
+                El Pulso de la <span class="text-[#00bcd4]">Comunidad</span>
             </h1>
-            <p class="text-lg md:text-xl text-gray-600 mb-8 max-w-3xl mx-auto">
+            <p class="text-lg md:text-xl text-gray-100 mb-8 max-w-3xl mx-auto drop-shadow-lg">
                 KausariFilms: Líderes en transmisiones en vivo, cubriendo el día a día, noticias de impacto y la vida social de nuestra región. Conectamos negocios y personas.
             </p>
             <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-4">
-                <a href="#servicios" class="px-8 py-3 rounded-full text-lg font-semibold primary-button transition duration-300 shadow-xl">
+                <a href="#servicios" class="px-8 py-3 rounded-full text-lg font-semibold bg-[#00bcd4] text-white hover:bg-[#00a0b8] transition duration-300 shadow-xl">
                     Impulsa tu Marca
                 </a>
-                <a href="#contacto" class="px-8 py-3 rounded-full text-lg font-semibold bg-transparent border-2 border-[#333333] text-[#333333] hover:bg-[#007ACC] hover:text-white transition duration-300">
+                <a href="#contacto" class="px-8 py-3 rounded-full text-lg font-semibold bg-transparent border-2 border-white text-white hover:bg-white hover:text-[#007ACC] transition duration-300 shadow-xl">
                     Hablemos
                 </a>
             </div>
@@ -215,7 +217,7 @@
                 <!-- Servicio 1: Live Streaming & Noticias (Borde Rojo) -->
                 <div class="card-base p-8 rounded-xl shadow-lg card-glow border-l-4 border-red-logo">
                     <div class="flex items-center mb-4">
-                        <span class="text-4xl text-[#ef4444] mr-3">📹</span>
+                        <span class="text-4xl text-[#ef4444] mr-3">🔹</span>
                         <h3 class="text-2xl font-semibold text-[#333333]">Cobertura en Vivo 24/7</h3>
                     </div>
                     <p class="text-gray-700 mb-4">
